# hockey-scoreboard-server

./: .env.example  .gitignore  DEPLOY.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: desktop-release.yml
hockey_server/: __init__.py  auth.py  config.py  db.py  game_logic.py  game_state_migrate.py  logo_urls.py  main.py  models.py  routes.py  schemas.py  state.py  vmix_payload.py
scripts/: add_user.py  set_password.py
src/: AdminUsers.tsx  App.css  App.tsx  AuthContext.tsx  LoginPage.tsx  SessionHome.tsx  api.ts  gameState.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game_state.rs  lib.rs  main.rs  server.rs
tests/: test_api.py  test_game_logic.py
