[package]
name = "hockey-scoreboard-server"
version = "0.1.0"
description = "Hockey Scoreboard local external API + editor"
authors = ["you"]
edition = "2021"

[lib]
name = "hockey_scoreboard_server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
axum = { version = "0.8", features = ["macros", "json"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
